Fix overlapping between header and car images

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -585,6 +585,7 @@ span {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1000;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
